tests/neg/i12986a/Bar.scala
class Bar(i: Int):
  inline def this() = this(0) // error
